C2 compilation hits 'node must be dead' assert

XMLWordPrintable

    • b15

        RenaissanceStressTest24H fails with:

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error ((...)/src/hotspot/share/opto/phaseX.hpp:518), pid=15727, tid=15776
        # assert(dead->outcnt() == 0 && !dead->is_top()) failed: node must be dead
        #
        # JRE version: Java(TM) SE Runtime Environment (21.0+23) (fastdebug build 21-ea+23-LTS-1937)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+23-LTS-1937, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xe23ea7] PhaseIterGVN::remove_dead_node(Node*)+0x117
        ...
        --------------- T H R E A D ---------------

        Current thread (0x00007fd674287510): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=15776, stack(0x00007fd654eff000,0x00007fd655000000) (1028K)]


        Current CompileTask:
        C2:5012159 300833 ! 4 com.sun.tools.javac.util.ByteBuffer::appendLong (53 bytes)

        Stack: [0x00007fd654eff000,0x00007fd655000000], sp=0x00007fd654ffaf60, free space=1007k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xe23ea7] PhaseIterGVN::remove_dead_node(Node*)+0x117 (phaseX.hpp:518)
        V [libjvm.so+0xe1d5fb] IfNode::fold_compares_helper(ProjNode*, ProjNode*, ProjNode*, PhaseIterGVN*)+0xc1b (ifnode.cpp:1044)
        V [libjvm.so+0xe209bd] IfNode::fold_compares(PhaseIterGVN*)+0x21d (ifnode.cpp:1336)
        V [libjvm.so+0xe22c2a] IfNode::Ideal(PhaseGVN*, bool)+0x11a (ifnode.cpp:1463)
        V [libjvm.so+0x151699d] PhaseIterGVN::transform_old(Node*)+0xcd (phaseX.cpp:833)
        V [libjvm.so+0x1510441] PhaseIterGVN::optimize()+0x81 (phaseX.cpp:1218)
        V [libjvm.so+0x9ef6c4] Compile::Optimize()+0x234 (compile.cpp:2223)
        V [libjvm.so+0x9f2c65] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1aa5 (compile.cpp:839)

          1. hs_err_pid10691.log
            939 kB
          2. hs_err_pid15727.log
            814 kB
          3. replay_pid10691.log
            966 kB
          4. replay_pid5417.log
            585 kB

              Assignee:
              Roland Westrelin
              Reporter:
              Roberto Castaneda Lozano
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: