8308660: C2 compilation hits 'node must be dead' assert

Reviewed-by: mbaesken
Backport-of: 053ff76e14046f796f6e10a9cb2ede1f1ae22ed6