src/hotspot/share/opto/ifnode.cpp
@@ -1035,6 +1035,10 @@ bool IfNode::fold_compares_helper(ProjNode* proj, ProjNode* success, ProjNode* f
     }
     hook->destruct(igvn);
 
+    if (adjusted_val->is_top() || adjusted_lim->is_top()) {
+      return false;
+    }
+
     int lo = igvn->type(adjusted_lim)->is_int()->_lo;
     if (lo < 0) {
       // If range check elimination applies to this comparison, it includes code to protect from overflows that may
